<resources>
    <string name="app_name">TapasHomeWork</string>
    <string name="textview_empty">                                                                                              </string>
    <string name="purchase_request">Available after purchase.</string>
    <string name="not_implemented">Not implemented yet.</string>
    <string name="can_not_be_used">can not be used.</string>
    <string name="on_sale_msg">"It&apos;s on discount."</string>

    <string name="wait_or_must_pay">Wait or must pay.</string>
    <string name="creators">creators : </string>

    <string name="subscribe_cnt">Subscribe : </string>
    <string name="like_cnt">Like : </string>
    <string name="view_cnt">View : </string>





</resources>